# puikit

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: README.md  animation.md  animation_compositing.md  backgrounds.md  box_drawing.md  color_system.md  drag_drop.md  focus_system.md  font_system.md  images.md  interaction_states.md  keyboard_contract.md  layout_system.md  memory_profiling.md  post_effects.md  rendering_system.md  testing.md  text_effects.md  web-backend-cjk-metrics-task.md  web_backend.md  widget_catalog.md  windows-cjk-textlayout-refactor-task.md  windows_backend.md
examples/background_3d/: main.py
examples/background_shader/: main.py
examples/demo_catalog/: README.md  main.py
examples/hello_world/: main.py
examples/layout_demo/: main.py
puikit/: __init__.py  _profile.py  backend.py  background.py  capability.py  color.py  easing.py  event.py  focus.py  font.py  image.py  layout.py  menu.py  panel.py  posteffect.py  text.py  textfx.py  theme.py
puikit/backends/: __init__.py  _d3d_shader.py  _macos_menu.py  _metal.py  _terminal_graphics.py  _ttf.py  _web_server.py  _win32_dragdrop.py  _win32_ime.py  _win32_menu.py  _win32_native.py  curses_backend.py  macos_backend.py  memory_backend.py  web_backend.py  windows_backend.py
puikit/backends/web/: client.css  client.js  index.html
puikit/fonts/: README.md
puikit/widgets/: __init__.py  _input.py  _selection.py  base.py  busy_indicator.py  button.py  checkbox.py  combo_box.py  container.py  dragbar.py  drawer.py  dropdown.py  image.py  image_button.py  json_view.py  label.py  layout_view.py  list.py  log_view.py  markdown_view.py  menu.py  message_box.py  progress_bar.py  radio.py  scroll_bar.py  scroll_view.py  splitter.py  table_view.py  tabs.py  text_block.py  text_edit.py  tree.py
scripts/: bump_version.py  fetch_fonts.py  release_preflight.py
tests/: test_alpha.py  test_auto_ink.py  test_background.py  test_background_idle.py  test_capability.py  test_cjk_fonts.py  test_clipboard_rich.py  test_color.py  test_container.py  test_corner_brackets.py  test_curses_colors.py  test_curses_emoji.py  test_curses_input.py  test_curses_wide_glyph.py  test_d3d_shader.py  test_drawer.py  test_easing.py  test_focus.py  test_font.py  test_image_widgets.py  test_input_widgets.py  test_json_view.py  test_label_padding.py  test_layout.py  test_log_view.py  test_macos_backend.py  test_markdown_view.py  test_menu.py  test_message_box.py  test_more_widgets.py  test_panel.py  test_posteffect.py  test_reduced_motion.py  test_shader_background.py  test_table_view.py  test_tabs.py  test_terminal_graphics.py  test_text.py  test_text_input_gating.py  test_textfx.py  (+9 more)
