[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "puikit"
version = "0.1.0"
description = "Capability-based Python UI framework with TUI and GUI backends"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "crftwr" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
macos = ["pyobjc-framework-Cocoa>=10"]

[project.urls]
Homepage = "https://github.com/crftwr/puikit"

[tool.setuptools.packages.find]
include = ["puikit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
