[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "puikit"
version = "0.1.0"
description = "Capability-based Python UI framework with TUI and GUI backends"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "crftwr" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: User Interfaces",
]
# numpy vectorizes WindowsBackend's WIC->D2D alpha premultiply (~12-14x
# faster on large images; see _win32_native._premultiply_bgra).
dependencies = ["numpy"]

[project.optional-dependencies]
# windows-curses backports the _curses C extension CPython omits on Windows, so
# the curses (TUI) backend and its tests run there; the marker keeps it off
# macOS/Linux, which already ship _curses.
dev = ["pytest>=8", "pytest-timeout>=2", "windows-curses>=2.4; sys_platform == 'win32'"]
macos = ["pyobjc-framework-Cocoa>=10", "pyobjc-framework-Quartz>=10"]

[project.urls]
Homepage = "https://github.com/crftwr/puikit"

[tool.setuptools.packages.find]
include = ["puikit*"]

[tool.setuptools.package-data]
# Bundled default fonts (Noto Sans / Noto Sans Mono — a designed-together
# superfamily whose mono and proportional faces share metrics, so the base unit
# fits both and text does not clip). Shipped so the GUI backends render the same
# on any machine without the fonts installed; OFL.txt is their SIL OFL license.
puikit = ["fonts/*.ttf", "fonts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Fail-safe: no single test may hang forever. A bug that spins (e.g. a
# `while` that never advances its guard) would otherwise leave an orphaned
# Python process pegged at 100% CPU after the runner's own timeout kills only
# the shell. The signal method raises in the main thread between bytecodes, so
# it interrupts even a pure-Python busy loop and reports which test hung.
timeout = 60
timeout_method = "signal"
