[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "puikit"
version = "1.0.1"
description = "Capability-based Python UI framework with TUI and GUI backends"
readme = "README.md"
license = "MIT"
authors = [{ name = "craftware" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
]
dependencies = [
    # numpy vectorizes WindowsBackend's WIC->D2D alpha premultiply (~12-14x
    # faster on large images; see _win32_native._premultiply_bgra).
    "numpy>=1.21",
    # windows-curses backports the _curses C extension CPython omits on Windows,
    # so the curses (TUI) backend runs there out of the box. The marker keeps it
    # off macOS/Linux, which already ship _curses.
    "windows-curses>=2.4; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-timeout>=2", "pillow>=9"]
macos = ["pyobjc-framework-Cocoa>=10", "pyobjc-framework-Quartz>=10"]
# Pillow decodes/crops/scales images for the terminal inline-image protocols
# (kitty / iTerm2 / sixel), so ImageView draws real pictures in a graphics-
# capable terminal instead of the alt-glyph fallback. Optional: without it a
# terminal shows the alt glyph and GUI backends are unaffected.
images = ["pillow>=9"]

[project.urls]
Homepage = "https://github.com/crftwr/puikit"
Repository = "https://github.com/crftwr/puikit"
Issues = "https://github.com/crftwr/puikit/issues"

[tool.setuptools.packages.find]
include = ["puikit*"]

[tool.setuptools.package-data]
# Bundled default fonts (Noto Sans / Noto Sans Mono — a designed-together
# superfamily whose mono and proportional faces share metrics, so the base unit
# fits both and text does not clip). Shipped so the GUI backends render the same
# on any machine without the fonts installed; OFL.txt is their SIL OFL license.
# The web backend also serves the client page assets (backends/web/*) from disk.
puikit = ["fonts/*.ttf", "fonts/*.otf", "fonts/*.txt", "backends/web/*.html", "backends/web/*.js", "backends/web/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Fail-safe: no single test may hang forever. A bug that spins (e.g. a
# `while` that never advances its guard) would otherwise leave an orphaned
# Python process pegged at 100% CPU after the runner's own timeout kills only
# the shell. The signal method raises in the main thread between bytecodes, so
# it interrupts even a pure-Python busy loop and reports which test hung.
timeout = 60
timeout_method = "signal"
